# aoc

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .nvim.lua  CLAUDE.md  CMakeLists.txt  CMakePresets.json  answers.json  day01.cc  day01.cpp  day02.cc  day03.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  generateYear.sh  matrix.hh  sample01.txt  sample10.txt  solutions  solutions2  test_day10.cc
include/: aoc.hh  coords.hh  dispatch.hh  hash.hh  rangepolyfill.hh  rational.hh  solutions.hh  util.hh
src/: dispatch.cc  main.cc  verify.cc
src/2015/: day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day20.cc  day21.cc  day22.cc  day23.cc  day24.cc  day25.cc
src/2016/: assembunny.hh  day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day20.cc  day21.cc  day22.cc  day23.cc  day24.cc  day25.cc
src/2017/: day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day20.cc  day21.cc  day22.cc  day23.cc  day24.cc  day25.cc  knothash.hh
src/2018/: day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day20.cc  day21.cc  day22.cc  day23.cc  day24.cc  day25.cc
src/2024/: day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day20.cc  day21.cc  day22.cc  day23.cc  day24.cc  (+1 more)
tests/: test_adjacent.cc  test_day10.cc  test_enumerate.cc  test_rational.cc
(+25 files in other folders)
